experimental/ir/testdata/tags/enum.proto.stderr.txt
error: enum type must define at least one value
  --> testdata/tags/enum.proto:19:1
   |
19 | enum Empty {}
   | ^^^^^^^^^^^^^

error: first value of open enum must be `0`
  --> testdata/tags/enum.proto:31:10
   |
15 | edition = "2023";
   |           ------ `buf.test.Open1` specified as open here
...
31 |     Z3 = 1;
   |          ^
   = help: open enums must define a zero value, and it must be the first one

error: first value of open enum must be `0`
  --> testdata/tags/enum.proto:36:10
   |
35 |     option features.enum_type = OPEN;
   |                                 ---- `buf.test.Open2` specified as open here
36 |     Z4 = 1;
   |          ^
   = help: open enums must define a zero value, and it must be the first one

encountered 3 errors
